Applied fix for aboutme page last slide images presented correctly on mobile cl

--- a/src/styles/modules/presentation.less
+++ b/src/styles/modules/presentation.less
@@ -227,6 +227,15 @@
                     margin-right: 10px;
                 }
             }
+
+            @media screen and (max-width: @screen-xs-max) { // Phone
+                width: auto;
+                text-align: center;
+                img {
+                    height: auto;
+                    margin-right: 0px;
+                }
+            }
         }
     }
 
